--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#00aba9">
   <meta name="msapplication-TileColor" content="#00aba9">
   <meta name="theme-color" content="#ffffff">
-  <title>Vitesse</title>
+  <title>Vue Spotify App</title>
 </head>
 <body>
   <div id="app"></div>
