--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
+  <!-- built files will be auto injected -->
+  <script src="https://sdk.scdn.co/spotify-player.js"></script>
 </body>
 </html>
